--- a/index.html
+++ b/index.html
@@ -1,11 +1,66 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>無題ドキュメント</title>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Untitled Document</title>
+    <!-- Bootstrap -->
+	<link href="css/bootstrap-3.3.7.css" rel="stylesheet">
+	
+<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	<!--[if lt IE 9]>
+		  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+		<![endif]-->
+	  <style>.pt100{padding-top:100px;}
+	  
+	  .b100{padding-bottom:100px;}</style>
 </head>
+  <body>
+  	<div class="container">
+		
+	  <div class="jumbotron">
+		  <h1 class="text-center">Hello, world!</h1>
+		  
+		  <p>201520016 　Gen Konno→portfolio</p>
+		  <p>This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+		  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+		  
+	  </div>
+		
+<div class="row pt100 b100">
+    <div class="col-lg-4"><img src="images/IMG_1515.JPG" class="img-responsive" alt="Placeholder image"></div>
+	<div class="col-lg-4"><img src="images/IMG_1559.JPG" class="img-responsive" alt="Placeholder image"></div>
+    <div class="col-lg-4"><img src="images/IMG_1576.JPG" class="img-responsive" alt="Placeholder image"></div>
+     </div>
+		
+<div class="row b100">
+    <div class="col-lg-4"><img src="images/IMG_1572.JPG" class="img-responsive" alt="Placeholder image"></div>
+	<div class="col-lg-4">
+	  <p>&nbsp;</p>
+	  <p>&nbsp;</p>
+	</div>
+    <div class="col-lg-4"><img src="images/IMG_1596.JPG" class="img-responsive" alt="Placeholder image"></div>
+     </div>		
+		
+<div class="row  b100">
+    <div class="col-lg-4"><img src="images/IMG_1556.JPG" class="img-responsive" alt="Placeholder image"></div>
+	<div class="col-lg-4"><img src="images/IMG_1555.JPG" class="img-responsive" alt="Placeholder image"></div>
+    <div class="col-lg-4"><img src="images/IMG_2425.JPG" class="img-responsive" alt="Placeholder image"></div>
+     </div>		
+		
 
-<body>
-	<h1>はじめてのGitHub</h1>
-</body>
+  </div>
+  	<!-- body code goes here -->
+
+
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
+	<script src="js/jquery-1.11.3.min.js"></script>
+
+	<!-- Include all compiled plugins (below), or include individual files as needed -->
+	 
+  <script src="js/bootstrap-3.3.7.js"></script>
+  </body>
 </html>
