--- a/slick/index.html
+++ b/slick/index.html
@@ -7,7 +7,7 @@
  　　  <link rel="stylesheet" href="slick.css" type="text/css">
       <link rel="stylesheet" href="sample.css" type="text/css">
 	  	<link href="bootstrap-3.3.7.css" rel="stylesheet">
- 　　  <script type="text/javascript" src="http://code.jquery.com/jquery-3.1.0.min.js"></script>
+ 　　  <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
  　　  <script src="slick.js" type="text/javascript"></script>
  　　  <script src="sample.js" type="text/javascript"></script>
 　　　 <title>jQuery</title>
